GNOME: Fall back on gnome-control-center print config dialog

Fedora does not have system-config-printer installed by default.  In
case our desktop environment is GNOME and we cannot run
system-config-printer, try to fall back on gnome-control-center
printers.

BUG=621545

Review-Url: https://codereview.chromium.org/2081003002
Cr-Commit-Position: refs/heads/master@{#401081}

Former-commit-id: a0555298896760e0e47bc9d8d02e8c371cb0a795